--- a/index.html
+++ b/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="2;url=https://rainbet.com/?r=thankyou">
-  <title>Redirecting...</title>
-  <style>
-    body {
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-family: sans-serif;
-      flex-direction: column;
-      text-align: center;
-    }
-    a {
-      color: #00ffcc;
-      margin-top: 20px;
-      text-decoration: underline;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirecting...</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            text-align: center;
+            padding-top: 20%;
+            color: #333;
+        }
+        h1 {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2em;
+        }
+    </style>
+    <!-- Meta Refresh to preserve referral link -->
+    <meta http-equiv="refresh" content="2;url=https://rainbet.com/?r=thankyou">
 </head>
 <body>
-  <h1>Loading your RainBet bonus...</h1>
-  <p>If you're not redirected automatically, <a href="https://rainbet.com/?r=thankyou">click here</a>.</p>
+    <h1>Loading your RainBet bonus...</h1>
+    <p>If you're not redirected, <a href="https://rainbet.com/?r=thankyou">click here</a>.</p>
 </body>
 </html>
+
